--- a/reference.bib
+++ b/reference.bib
@@ -15,7 +15,8 @@
 @misc{cadencecompiler,
   title={Compiler User’s Manual},
   author={Cadence, RTL},
-  publisher={Cadence}
+  publisher={Cadence},
+  year={2014}
 }
 
 @inproceedings{4,
@@ -56,7 +57,7 @@
 
 @article{8,
   title={Data memory organization and optimizations in application-specific systems},
-  author={Panda, P Ranjan and Dutt, Nikil D and Nicolau, Alexandru and Catthoor, Francky and Vandecappelle, Arnout and Brockmeyer, Erik and Kulkarni, Chidamber and De Greef, Eddy},
+  author={Panda, Preeti Ranjan and Dutt, Nikil D and Nicolau, Alexandru and Catthoor, Francky and Vandecappelle, Arnout and Brockmeyer, Erik and Kulkarni, Chidamber and De Greef, Eddy},
   journal={IEEE Design \& Test of Computers},
   number={3},
   pages={56--57},
@@ -97,7 +98,7 @@
 
 @inproceedings{passes1995multi,
   title={Multi-dimensional interleaving for time-and-memory design optimization},
-  author={Passes, NL and Sha, EH-M and Chao, Liang-Fang},
+  author={Passes, NL and Sha, Edwin Hsing-Mean and Chao, Liang-Fang},
   booktitle={Computer Design: VLSI in Computers and Processors, 1995. ICCD'95. Proceedings., 1995 IEEE International Conference on},
   pages={440--445},
   year={1995},
@@ -236,13 +237,12 @@ year = {1998},
 
 
 @book{tcm,
- author = {Ma, Zhe and others},
- title = {Systematic Methodology for Real-Time Cost-Effective Mapping of Dynamic Concurrent Task-Based Systems on Heterogenous Platforms},
- year = {2007},
- isbn = {1402063288, 9781402063282},
- edition = {1st},
- publisher = {Springer Publishing Company, Incorporated},
+  title={Systematic methodology for real-time cost-effective mapping of dynamic concurrent task-based systems on heterogenous platforms},
+  author={Ma, Zhe and Marchal, Pol and Scarpazza, Daniele Paolo and Yang, Peng and Wong, Chun and G{\'o}mez, Jos{\'e} Ignacio and Himpe, Stefaan and Ykman-Couvreur, Chantal and Catthoor, Francky},
+  year={2007},
+  publisher={Springer Science \& Business Media}
 }
+
 
 
 @PhdThesis{narasinga,
@@ -345,31 +345,24 @@ number={},
 pages={},
 }
 
-@INPROCEEDINGS{Ben00b,
-author={Benini, L. and Macii, A. and Poncino, M.},
-booktitle={Low Power Electronics and Design, 2000. ISLPED '00. Proceedings of the 2000 International Symposium on}, title={A recursive algorithm for low-power memory partitioning},
-year={2000},
-month={},
-volume={},
-number={},
-pages={ 78 - 83},
-keywords={ ARM processor; automatic partitioning; average energy savings; dynamic execution profile; embedded systems; globally optimum solution; low-power memory partitioning; memory access patterns; memory-processor integration; multi-banked SRAM architecture; on-chip SRAM; power cost metrics; recursive algorithm; SRAM chips; application specific integrated circuits; embedded systems; logic partitioning; low-power electronics; microprocessor chips;},
-doi={10.1109/LPE.2000.155257},
-ISSN={},}
+@inproceedings{Ben00b,
+  title={A recursive algorithm for low-power memory partitioning},
+  author={Benini, Luca and Macii, Alberto and Poncino, Massimo},
+  booktitle={Low Power Electronics and Design, 2000. ISLPED'00. Proceedings of the 2000 International Symposium on},
+  pages={78--83},
+  year={2000},
+  organization={IEEE}
+}
 
-@ARTICLE{Ben00c,
-author={Benini, L. and others},
-journal={Design Test of Computers, IEEE}, title={Increasing energy efficiency of embedded systems by application-specific memory hierarchy generation},
-year={2000},
-month={apr-jun},
-volume={17},
-number={2},
-pages={74 -85},
-keywords={MP3 decoder;application-specific memory hierarchy generation;automatic memory hierarchy generation;embedded software;embedded systems;energy efficiency;memory access locality;decoding;embedded systems;optimisation;systems analysis;},
-doi={10.1109/54.844336},
-ISSN={0740-7475},}
-
-
+@article{Ben00c,
+  title={Increasing energy efficiency of embedded systems by application-specific memory hierarchy generation},
+  author={Benini, Luca and Macii, Alberto and Macii, Enrico and Poncino, Massimo},
+  journal={IEEE Design \& Test of Computers},
+  number={2},
+  pages={74--85},
+  year={2000},
+  publisher={IEEE}
+}
 
 @INPROCEEDINGS{Ben00d,
 author={Benini, L. and Macii, A. and Poncino, M.},
@@ -481,46 +474,33 @@ ISSN={0018-9448},}
  keywords = {FPGA, Viterbi coding, dynamic reconfiguration},
 }
 
-
-
-
-@INPROCEEDINGS{Ben99,
-author="Simunic, T. and Benini, L. and De Micheli, G.",
-booktitle="Design Automation Conference, 1999. Proceedings. 36th", title="Cycle-accurate simulation of energy consumption in embedded systems",
-year="1999",
-pages="867 -872",
-doi="10.1109/DAC.1999.782199",
+@inproceedings{Ben99,
+  title={Cycle-accurate simulation of energy consumption in embedded systems},
+  author={{\v{S}}imuni{\'c}, Tajana and Benini, Luca and De Micheli, Giovanni},
+  booktitle={Proceedings of the 36th annual ACM/IEEE Design Automation Conference},
+  pages={867--872},
+  year={1999},
+  organization={ACM}
 }
 
-@INPROCEEDINGS{Che09,
-author={Cheung, E. and Hsieh, H. and Balarin, F.},
-booktitle={Design Automation Conference, 2009. ASP-DAC 2009. Asia and South Pacific}, title={Memory subsystem simulation in software TLM/T models},
-year={2009},
-month={jan.},
-volume={},
-number={},
-pages={811 -816},
-keywords={caches;industrial-strength MPEG-2 decoder;memory addresses;memory subsystem simulation;multiprocessor system-on-a-chips;reverse address map;software transition-level modeling;cache storage;decoding;multiprocessing systems;storage allocation;system-on-chip;video coding;},
-doi={10.1109/ASPDAC.2009.4796580},
-ISSN={},}
-
+@inproceedings{Che09,
+  title={Memory subsystem simulation in software TLM/T models},
+  author={Cheung, Eric and Hsieh, Harry and Balarin, Felice},
+  booktitle={Design Automation Conference, 2009. ASP-DAC 2009. Asia and South Pacific},
+  pages={811--816},
+  year={2009},
+  organization={IEEE}
+}
 
 @article{Pgk01,
- author = {Panda, P. R. and others},
- title = {Data and memory optimization techniques for embedded systems},
- journal = {ACM Trans. Des. Autom. Electron. Syst.},
- issue_date = {April 2001},
- volume = {6},
- number = {2},
- month = apr,
- year = {2001},
- issn = {1084-4309},
- pages = {149--206},
- numpages = {58},
- acmid = {375978},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {DRAM, SRAM, address generation, allocation, architecture exploration, code transformation, data cache, data optimization, high-level synthesis, memory architecture customization, memory power dissipation, register file, size estimation, survey},
+  title={Data and memory optimization techniques for embedded systems},
+  author={Panda, Preeti Ranjan and Catthoor, Francky and Dutt, Nikil D and Danckaert, Koen and Brockmeyer, Erik and Kulkarni, Chidamber and Vandercappelle, A and Kjeldsberg, Per Gunnar},
+  journal={ACM Transactions on Design Automation of Electronic Systems (TODAES)},
+  volume={6},
+  number={2},
+  pages={149--206},
+  year={2001},
+  publisher={ACM}
 }
 
 @INPROCEEDINGS{Fil12,
@@ -570,13 +550,14 @@ ISSN={},}
 }
 
 @article{Ang13,
-  title={A Scalable and Near-optimal Representation for Storage Size Management},
-  author={Kritikakou, A. and Catthoor, F. and Kelefouras, V. and Goutis, C.},
-  journal={ACM Trans. Architecture and Code Optimization},
-  volume={conditionally accepted},
-  year={2013}
+  title={A scalable and near-optimal representation for storage size management},
+  author={Kritikakou, A and Catthoor, F and Kelefouras, V and Goutis, C},
+  journal={ACM transaction architecture and code optimization},
+  volume={11},
+  number={1},
+  pages={1--25},
+  year={2014}
 }
-
 
 @article{Ang13b,
   title={Near-optimal and Scalable Intra-signal In-place for Non-overlapping and Irregular Access Scheme},
