--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,34 @@
+@inproceedings{malik2000low,
+  title={A low power unified cache architecture providing power and performance flexibility},
+  author={Malik, Afzal and Moyer, Bill and Cermak, Dan},
+  booktitle={Low Power Electronics and Design, 2000. ISLPED'00. Proceedings of the 2000 International Symposium on},
+  pages={241--243},
+  year={2000},
+  organization={IEEE}
+}
+
+@article{guo2013data,
+  title={Data placement and duplication for embedded multicore systems with scratch pad memory},
+  author={Guo, Yibo and Zhuge, Qingfeng and Hu, Jingtong and Yi, Juan and Qiu, Meikang and Sha, Edwin HM},
+  journal={Computer-Aided Design of Integrated Circuits and Systems, IEEE Transactions on},
+  volume={32},
+  number={6},
+  pages={809--817},
+  year={2013},
+  publisher={IEEE}
+}
+
+@article{mittal2014survey,
+  title={A survey of architectural techniques for improving cache power efficiency},
+  author={Mittal, Sparsh},
+  journal={Sustainable Computing: Informatics and Systems},
+  volume={4},
+  number={1},
+  pages={33--43},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @article{lee2003compilation,
   title={Compilation approach for coarse-grained reconfigurable architectures},
   author={Lee, Jongeun and Choi, Kiyoung and Dutt, Nikil D},
